Add endpoint to get a record by id
